yamls/testvs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngx
  namespace: myistio
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: ngx1
          image: nginx:1.18-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ngx
  namespace: myistio
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:  #service通过selector和pod建立关联
    app: nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testvs
  namespace: myistio
spec:
  hosts:
    - ngx
  http:
    - route:
        - destination:
            host: ngx
            port:
              number: 80
